--- a/Exercise 1_Basic Data Manipulation.Rmd
+++ b/Exercise 1_Basic Data Manipulation.Rmd
@@ -18,19 +18,22 @@ refine_original <- read.csv("refine_original.csv")
 ```
 
 ### 1: Clean up brand names
-```{r echo=TRUE, message=FALSE}
-refine_original$company[grepl("^a", refine_original$company) | grepl("^A", refine_original$company)] <- "akzo"
-refine_original$company[grepl("^p", refine_original$company) | grepl("^P", refine_original$company) | grepl("^f", refine_original$company)] <- "philips"
-refine_original$company[grepl("^u", refine_original$company) | grepl("^U", refine_original$company)] <- "unilever"
-refine_original$company[grepl("^v", refine_original$company) | grepl("^V", refine_original$company)] <- "van houten"
-```
-
 ### 2: Separate product code and number
 ### 3: Add product categories
 ### 4: Add full address for geocoding
 ### 5: Create dummy variables for company and product category
 ```{r echo=TRUE, message=FALSE}
 refine_clean <- refine_original %>% 
+  # 1: Clean up brand names
+  mutate(
+    company = case_when(
+      substr(tolower(.$company), 0, 1) == "a" ~ "akzo", 
+      substr(tolower(.$company), 0, 1) == "p" | substr(tolower(.$company), 0, 1) == "f" ~ "philips", 
+      substr(tolower(.$company), 0, 1) == "u" ~ "unilever", 
+      substr(tolower(.$company), 0, 1) == "v" ~ "van houten"
+    )
+  ) %>% 
+  
   # 2: Separate product code and number
   separate(Product.code...number, c("product_code", "product_number"), sep = "-") %>%
   
