--- a/Exercise 1_Basic Data Manipulation.Rmd
+++ b/Exercise 1_Basic Data Manipulation.Rmd
@@ -25,12 +25,14 @@ refine_original <- read.csv("refine_original.csv")
 ```{r echo=TRUE, message=FALSE}
 refine_clean <- refine_original %>% 
   # 1: Clean up brand names
+  mutate(company = tolower(company)) %>%  
+  
   mutate(
     company = case_when(
-      substr(tolower(.$company), 0, 1) == "a" ~ "akzo", 
-      substr(tolower(.$company), 0, 1) == "p" | substr(tolower(.$company), 0, 1) == "f" ~ "philips", 
-      substr(tolower(.$company), 0, 1) == "u" ~ "unilever", 
-      substr(tolower(.$company), 0, 1) == "v" ~ "van houten"
+      substr(.$company, 0, 1) == "a" ~ "akzo",
+      substr(.$company, 0, 1) == "p" | substr(.$company, 0, 1) == "f" ~ "philips",
+      substr(.$company, 0, 1) == "u" ~ "unilever",
+      substr(.$company, 0, 1) == "v" ~ "van houten"
     )
   ) %>% 
   
